# convex-streaming-olap-export

./: .env.example  .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md  install.sh  justfile  release-please-config.json  rustfmt.toml
.depot/workflows/: ci.yml  release-rc.yml  release.yml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  actionlint.yaml  pull_request_template.md
.github/workflows/: ci.yml  semantic-pr.yml  semgrep.yml
apps/convex-inspect/: Cargo.toml  README.md
apps/convex-inspect/src/: main.rs
apps/convex-sync/: CHANGELOG.md  Cargo.toml  README.md  build.rs
apps/convex-sync/src/: main.rs
crates/convex-cdc-core/: Cargo.toml
crates/convex-cdc-core/src/: config.rs  lib.rs
crates/convex-cdc-core/src/convex/: client.rs  snapshot.rs
crates/convex-cdc-core/src/model/: checkpoint.rs
crates/convex-cdc-core/src/sync/: delta_sync.rs  mod.rs  runner.rs  snapshot_sync.rs
crates/convex-export-s3/: Cargo.toml
crates/convex-export-s3/src/publish/: mod.rs
crates/convex-export-s3/src/service/: mod.rs
crates/convex-export-s3/src/sink/: parquet.rs
crates/convex-export-s3/src/staging/: materialize.rs  state.rs
crates/convex-sync-core/: Cargo.toml
crates/convex-sync-core/src/: errors.rs  lib.rs
crates/convex-sync-core/src/convex/: schemas.rs
crates/convex-sync-core/src/state/: mod.rs
crates/convex-sync-core/src/telemetry/: logging.rs
crates/convex-target-s3/: Cargo.toml
crates/convex-target-s3/src/: lib.rs
crates/convex-target-s3/src/publish/: mod.rs
crates/convex-target-s3/src/service/: mod.rs
crates/convex-target-s3/src/sink/: jsonl.rs  mod.rs  parquet.rs
crates/convex-target-s3/src/staging/: materialize.rs  project.rs  state.rs
docs/: architecture.md  demo-storyboard.md  milestone-01.md  monitoring.md  public-reference-map.md  release-artifacts.md  roadmap.md
ops/aws/: README.md
ops/aws/terraform/databricks_reader_role/: main.tf  terraform.tfvars.example
ops/aws/terraform/palantir_cloud_identity_reader_role/: terraform.tfvars.example  variables.tf
ops/aws/terraform/palantir_oidc_reader_role/: terraform.tfvars.example
ops/aws/terraform/publisher_user/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
ops/aws/terraform/s3_bucket/: terraform.tfvars.example
ops/databricks/: README.md
ops/databricks/sql/: README.md
ops/databricks/terraform/unity_catalog_s3_external_location/: terraform.tfvars.example  versions.tf
platform/aws/: README.md
platform/aws/s3_consumers/terraform/databricks_reader_role/: outputs.tf  terraform.tfvars.example  variables.tf
platform/aws/s3_consumers/terraform/palantir_cloud_identity_reader_role/: main.tf  terraform.tfvars.example
platform/aws/s3_consumers/terraform/palantir_oidc_reader_role/: main.tf  terraform.tfvars.example  variables.tf
platform/aws/s3_target/terraform/publisher_user/: terraform.tfvars.example
platform/aws/s3_target/terraform/s3_bucket/: main.tf  terraform.tfvars.example  variables.tf
platform/databricks/: README.md
platform/databricks/delta/: README.md  databricks.yml
platform/databricks/delta/dashboards/: README.md  convex_sync_overview.lvdash.json.tmpl  dashboards.json
platform/databricks/delta/extractor/: README.md  convex_cdc_job.py
platform/databricks/delta/lakeflow/: bronze_to_silver_template.sql
platform/databricks/delta/resources/: convex_delta_autocdc.pipeline.yml  convex_delta_extract.job.yml
platform/databricks/delta/sql/bootstrap/: 001_control_schema.sql  002_bronze_schema.sql  003_silver_schema.sql  004_checkpoint_table.sql  005_checkpoint_view.sql
platform/databricks/native/: README.md
platform/databricks/native/extractor/: README.md  convex_cdc_job.py
platform/databricks/native/lakeflow/: bronze_to_silver_template.sql
platform/databricks/s3/: README.md
platform/databricks/s3/sql/: README.md  register_staging_views.sql.tmpl
platform/databricks/s3/terraform/unity_catalog_s3_external_location/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: apply-databricks-sql-dir.sh  bootstrap-databricks-delta.sh  convex-sync-dev  databricks-exec-sql-statement.sh  deploy-databricks-delta-pipeline.sh  deploy-databricks-delta.sh  ensure-databricks-delta-secret.sh  load-source-config.sh  publish-databricks-delta-dashboard.sh  render-databricks-delta-bootstrap.sh  render-databricks-delta-dashboard.sh  render-databricks-delta-pipeline.sh  resolve-prerelease-version.sh  run-databricks-delta-job.sh  run-databricks-delta-pipeline.sh  run-databricks-delta-smoke.sh  snapshot-aws-templates.sh  snapshot-databricks-templates.sh  sync-databricks-staging-views.sh
sources/: README.md
sources/meshix-api/: delta-pipeline.json  env.sh
src/: errors.rs  lib.rs
src/convex/: client.rs  deltas.rs  mod.rs
src/model/: checkpoint.rs  event.rs  mod.rs  schema.rs
src/publish/: mod.rs
src/service/: mod.rs
src/sink/: jsonl.rs  parquet.rs
src/staging/: materialize.rs  mod.rs  project.rs  state.rs
src/state/: checkpoint_store.rs
src/sync/: runner.rs
src/telemetry/: metrics.rs
