[package]
name = "convex-streaming-olap-export"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
name = "convex_streaming_olap_export"
path = "src/lib.rs"

[[bin]]
name = "convex-export"
path = "src/bin/convex-export.rs"

[dependencies]
clap = { version = "4.5.39", features = ["derive", "env"] }
dotenvy = "0.15.7"
hex = "0.4.3"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
url = { version = "2.5.4", features = ["serde"] }
