[workspace]
members = [
  "apps/convex-sync",
  "crates/convex-cdc-core",
  "crates/convex-target-s3",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
publish = false
version = "0.1.0"

[workspace.dependencies]
arrow-array = "54.2.1"
arrow-schema = "54.2.1"
aws-config = "1.8.8"
aws-sdk-s3 = "1.106.0"
clap = { version = "4.5.39", features = ["derive", "env"] }
dotenvy = "0.15.7"
hex = "0.4.3"
parquet = { version = "54.2.1", default-features = false, features = ["arrow"] }
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
url = { version = "2.5.4", features = ["serde"] }
walkdir = "2.5.0"
