[package]
name = "convex-sync"
edition.workspace = true
license.workspace = true
publish.workspace = true
version = "0.0.3"

[[bin]]
name = "convex-sync"
path = "src/main.rs"

[dependencies]
clap.workspace = true
convex-sync-core = { path = "../../crates/convex-sync-core" }
convex-export-s3 = { path = "../../crates/convex-export-s3" }
dotenvy.workspace = true
tokio.workspace = true
url.workspace = true
