[package]
name = "convex-cdc-core"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[lib]
name = "convex_cdc_core"
path = "src/lib.rs"

[dependencies]
arrow-schema.workspace = true
clap.workspace = true
hex.workspace = true
parquet.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
