[package]
name = "convex-export-s3"
edition.workspace = true
license.workspace = true
publish.workspace = true
version = "0.0.3"

[lib]
name = "convex_export_s3"
path = "src/lib.rs"

[dependencies]
arrow-array.workspace = true
arrow-schema.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
convex-sync-core = { path = "../convex-sync-core" }
hex.workspace = true
parquet.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
walkdir.workspace = true
