[package]
name = "convex-sync-core"
edition.workspace = true
license.workspace = true
publish.workspace = true
version = "0.0.3"

[lib]
name = "convex_sync_core"
path = "src/lib.rs"

[dependencies]
clap.workspace = true
hex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
