[package]
name = "convex-target-s3"
edition.workspace = true
license.workspace = true
publish.workspace = true
version = "0.0.1"

[lib]
name = "convex_target_s3"
path = "src/lib.rs"

[dependencies]
arrow-array.workspace = true
arrow-schema.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
convex-cdc-core = { path = "../convex-cdc-core" }
hex.workspace = true
parquet.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
walkdir.workspace = true
